--- a/src/pages/LiftMate/Workouts/styles/Workouts.scss
+++ b/src/pages/LiftMate/Workouts/styles/Workouts.scss
@@ -71,7 +71,7 @@
   }
   .my-trainees-accordion {
     position: sticky;
-    top: -1rem;
+    top: 0rem;
     z-index: 10;
     padding: 1rem 0;
     background-color: $neutral-gray;
